# KaggleDataset

./: .codespellignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  SETUP_EIA_ENERGY_PRICES.md  UPLOAD_STATUS.md  kaggle_config.yaml  kaggle_uploader.py  pyproject.toml  setup.cfg  tui.json
.github/workflows/: kaggle_upload.yml
.opencode/: opencode.json
CrudeOil/: README.md  crude_oil_brent.csv  crude_oil_brent.py
CrudeOil/csv/: crude_oil_brent.csv
CrudeOil/json/: crude_oil_brent.json
CrudeOil/parquet/: crude_oil_brent.parquet
EuropeanElectricity/: european_electricity_prices.py  european_interconnection.py  european_interconnection_risk_analysis.ipynb  european_wholesale_electricity_prices_risk_analysis.ipynb
EuropeanElectricity/combined/csv/: all_interconnection_data.csv  country_indicators.csv  flow_indicators.csv  import_potential.csv  peak_demand.csv
EuropeanElectricity/combined/json/: all_interconnection_data.json
EuropeanElectricity/combined/parquet/: all_interconnection_data.parquet
EuropeanElectricity/csv/: european_wholesale_electricity_prices.csv  interconnectors.csv
EuropeanElectricity/europe_interconnection_data/: README.txt  peak_demand.csv
EuropeanElectricity/europe_interconnection_data/Country indicators/: country_hourly_chart_2024.csv  country_hourly_chart_2030.csv  country_hourly_chart_2040.csv  country_monthly_chart_2024.csv  country_monthly_chart_2030.csv  country_monthly_chart_2040.csv
EuropeanElectricity/european_wholesale_electricity_price_data_hourly/: Austria.csv  Belgium.csv  Bulgaria.csv  Croatia.csv  Czechia.csv  Denmark.csv  Estonia.csv  Finland.csv  France.csv  Germany.csv  Greece.csv  Hungary.csv  Ireland.csv  Italy.csv  Latvia.csv  Lithuania.csv  Luxembourg.csv  Montenegro.csv  Netherlands.csv  North Macedonia.csv  Norway.csv  Poland.csv  Portugal.csv  Romania.csv  Serbia.csv  Slovakia.csv  Slovenia.csv  Spain.csv  Sweden.csv  Switzerland.csv  United Kingdom.csv  all_countries.csv
EuropeanElectricity/json/: country_indicators.json  european_wholesale_electricity_prices.json  flow_indicators.json  import_potential.json  interconnectors.json  peak_demand.json
EuropeanElectricity/parquet/: country_indicators.parquet  european_wholesale_electricity_prices.parquet  flow_indicators.parquet  import_potential.parquet  interconnectors.parquet  peak_demand.parquet
Gasoline/: eia_downloader.py  eia_energy_prices.csv
Gasoline/csv/: eia_energy_prices.csv  wti_crude_oil.csv
Gasoline/json/: eia_energy_prices.json  wti_crude_oil.json
Gasoline/parquet/: eia_energy_prices.parquet  wti_crude_oil.parquet
HenryHub/: Henry_Hub_Natural_Gas_Spot_Annual.csv  Henry_Hub_Natural_Gas_Spot_Daily.csv  Henry_Hub_Natural_Gas_Spot_Monthly.csv  Henry_Hub_Natural_Gas_Spot_Weekly.csv  henry_hub_downloader.py  henry_hub_natural_gas.csv  processor.py  text
HenryHub/csv/: daily.csv  henry_hub_natural_gas.csv  monthly.csv  weekly.csv  yearly.csv
HenryHub/json/: daily.json  henry_hub_natural_gas.json  monthly.json  weekly.json  yearly.json
HenryHub/parquet/: daily.parquet  henry_hub_natural_gas.parquet  monthly.parquet  weekly.parquet  yearly.parquet
(+11 files in other folders)
